git-svn-id: http://svn.vdombox.ru/flextools/trunk@5921 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectAttributesPanel.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/ObjectAttributesPanel.mxml
@@ -8,6 +8,15 @@
 
 	<fx:Script>
 		<![CDATA[
+			import net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.AttributeTextFiledItemRenderer;
+			import net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.AttributePagelinkItemRenderer;
+			import net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.AttributeObjectlistItemRenderer;
+			import net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.AttributeNumberItemRenderer;
+			import net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.AttributeMultilineItemRenderer;
+			import net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.AttributeFileItemRenderer;
+			import net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.AttributeExternalEditorItemRenderer;
+			import net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.AttributeDropdownItemRenderer;
+			import net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.AttributeColorItemRenderer;
 			import mx.collections.ArrayCollection;
 			import mx.collections.Sort;
 			import mx.collections.SortField;
