--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributePagelinkItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributePagelinkItemRenderer.mxml
@@ -8,14 +8,16 @@
 
 	<fx:Script>
 		<![CDATA[
-			import mx.events.ListEvent;
+			import net.vdombox.ide.modules.wysiwyg.view.components.AttributeValidator;
 			import mx.collections.ArrayCollection;
 			import mx.collections.Sort;
 			import mx.collections.SortField;
+			import mx.events.ListEvent;
 			import mx.events.ValidationResultEvent;
 
 			import net.vdombox.ide.common.vo.AttributeDescriptionVO;
 			import net.vdombox.ide.common.vo.AttributeVO;
+			import net.vdombox.ide.common.vo.PageLinkVO;
 
 			[Bindable]
 			private var _attributeVO : AttributeVO;
@@ -37,17 +39,11 @@
 
 				var codeInterface : Object = {}
 				var matches : Array = _attributeDescriptionVO.codeInterface.match( codeInterfaceRE );
-//
+				//
 				codeInterface[ "type" ] = matches[ 1 ].toLowerCase();
 				codeInterface[ "value" ] = matches[ 2 ];
 
 				nameLabel.setStyle( "backgroundColor", getColorByGroup( _attributeDescriptionVO.colorGroup ) );
-//				valueField.maxChars = uint( codeInterface[ "value" ] );
-//				valueField.text = _attributeVO.value;
-
-
-
-
 
 				var comboBoxData : ArrayCollection = new ArrayCollection();
 				var codeInterfaceValueRE : RegExp = /\((.*?)\|(.*?)\)/g;
@@ -55,61 +51,32 @@
 				var listValues : Array = [];
 				var selectedItem : Object = {};
 
-				while ( listValues = codeInterfaceValueRE.exec( codeInterface[ "value" ] ) )
+				var pageLinkVO : PageLinkVO;
+
+				for each ( pageLinkVO in value.pageLinks )
 				{
+					comboBoxData.addItem( pageLinkVO );
 
-					var listItem : Object = { label: listValues[ 1 ], data: listValues[ 2 ] };
-
-					comboBoxData.addItem( listItem );
-
-					if ( _attributeVO.value == listValues[ 2 ] )
-						selectedItem = comboBoxData[ comboBoxData.length - 1 ];
+					if ( _attributeVO.value == pageLinkVO.id )
+						selectedItem = pageLinkVO;
 				}
 
 				comboBoxData.sort = new Sort();
-				comboBoxData.sort.fields = [ new SortField( "label", true ) ];
+				comboBoxData.sort.fields = [ new SortField( "name", true ) ];
 				comboBoxData.refresh();
 
 				valueField.dataProvider = comboBoxData;
 				valueField.selectedItem = selectedItem;
-
-
-
-
-
-//				regExpValidator.expression = _attributeDescriptionVO.regularExpressionValidation.toString();
-//				regExpValidator.noMatchError = _attributeDescriptionVO.errorValidationMessage;
-//				regExpValidator.validate();
 			}
 
 			private var regExpValidator : AttributeValidator = new AttributeValidator();
 
 			private function creationCompleteHandler() : void
 			{
-//				regExpValidator.source = valueField;
-//				regExpValidator.property = "text";
-//				regExpValidator.required = false;
-//				regExpValidator.trigger = valueField;
-//
-//				regExpValidator.triggerEvent = Event.CHANGE;
-//
-//				regExpValidator.addEventListener( ValidationResultEvent.VALID, validHandler, false, 0, true );
-//				regExpValidator.addEventListener( ValidationResultEvent.INVALID, validHandler, false, 0, true );
-//
-//				regExpValidator.validate();
 			}
 
 			private function validHandler( event : ValidationResultEvent ) : void
 			{
-				//				if ( event.type == ValidationResultEvent.VALID )
-				//				{
-				//					okButton.enabled = true;
-				//				}
-				//				else if ( event.type == ValidationResultEvent.INVALID )
-				//				{
-				//					okButton.enabled = false;
-				//				}
-
 			}
 
 			private function getColorByGroup( groupNumber : uint ) : String
@@ -153,7 +120,7 @@
 
 			protected function valueField_changeHandler( event : ListEvent ) : void
 			{
-				_attributeVO.value = valueField.value.toString();
+				_attributeVO.value = valueField.selectedItem.id;
 			}
 		]]>
 	</fx:Script>
@@ -169,7 +136,7 @@
 				paddingBottom="2" paddingRight="5" paddingTop="2" textAlign="right" verticalAlign="middle" />
 
 	<mx:ComboBox id="valueField"
-				 height="21" minWidth="10" width="90"
+				 height="21" labelField="name" minWidth="10" width="90"
 				 textAlign="left"
-				 change="valueField_changeHandler(event)" />
+				 change="valueField_changeHandler( event )" />
 </s:ItemRenderer>
