--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeColorItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeColorItemRenderer.mxml
@@ -2,21 +2,20 @@
 <s:ItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009"
 				xmlns:s="library://ns.adobe.com/flex/spark"
 				xmlns:mx="library://ns.adobe.com/flex/halo"
+				xmlns:colorPicker="net.vdombox.ide.modules.wysiwyg.view.components.colorPicker.*"
 				
-				minHeight="21" width="100%"
-				creationComplete="creationCompleteHandler()">
+				minHeight="21" width="100%" xmlns:attributeRenderers="net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.*">
 
 	<fx:Script>
 		<![CDATA[
+			import net.vdombox.ide.modules.wysiwyg.view.components.AttributeValidator;
 			import mx.collections.ArrayCollection;
 			import mx.collections.Sort;
 			import mx.collections.SortField;
-			import mx.events.ListEvent;
 			import mx.events.ValidationResultEvent;
 
 			import net.vdombox.ide.common.vo.AttributeDescriptionVO;
 			import net.vdombox.ide.common.vo.AttributeVO;
-			import net.vdombox.ide.common.vo.PageLinkVO;
 
 			[Bindable]
 			private var _attributeVO : AttributeVO;
@@ -43,39 +42,74 @@
 				codeInterface[ "value" ] = matches[ 2 ];
 
 				nameLabel.setStyle( "backgroundColor", getColorByGroup( _attributeDescriptionVO.colorGroup ) );
+				//				valueField.maxChars = uint( codeInterface[ "value" ] );
+				//				valueField.text = _attributeVO.value;
 
-				var comboBoxData : ArrayCollection = new ArrayCollection();
-				var codeInterfaceValueRE : RegExp = /\((.*?)\|(.*?)\)/g;
 
-				var listValues : Array = [];
-				var selectedItem : Object = {};
 
-				var pageLinkVO : PageLinkVO;
 
-				for each ( pageLinkVO in value.pageLinks )
-				{
-					comboBoxData.addItem( pageLinkVO );
 
-					if ( _attributeVO.value == pageLinkVO.id )
-						selectedItem = pageLinkVO;
-				}
+//				var comboBoxData : ArrayCollection = new ArrayCollection();
+//				var codeInterfaceValueRE : RegExp = /\((.*?)\|(.*?)\)/g;
+//
+//				var listValues : Array = [];
+//				var selectedItem : Object = {};
+//
+//				while ( listValues = codeInterfaceValueRE.exec( codeInterface[ "value" ] ) )
+//				{
+//
+//					var listItem : Object = { label: listValues[ 1 ], data: listValues[ 2 ] };
+//
+//					comboBoxData.addItem( listItem );
+//
+//					if ( _attributeVO.value == listValues[ 2 ] )
+//						selectedItem = comboBoxData[ comboBoxData.length - 1 ];
+//				}
+//
+//				comboBoxData.sort = new Sort();
+//				comboBoxData.sort.fields = [ new SortField( "label", true ) ];
+//				comboBoxData.refresh();
 
-				comboBoxData.sort = new Sort();
-				comboBoxData.sort.fields = [ new SortField( "name", true ) ];
-				comboBoxData.refresh();
+//				valueField.color = _attributeVO.value;
+//				valueField.selectedItem = selectedItem;
 
-				valueField.dataProvider = comboBoxData;
-				valueField.selectedItem = selectedItem;
+
+
+
+
+				//				regExpValidator.expression = _attributeDescriptionVO.regularExpressionValidation.toString();
+				//				regExpValidator.noMatchError = _attributeDescriptionVO.errorValidationMessage;
+				//				regExpValidator.validate();
 			}
 
 			private var regExpValidator : AttributeValidator = new AttributeValidator();
 
 			private function creationCompleteHandler() : void
 			{
+				//				regExpValidator.source = valueField;
+				//				regExpValidator.property = "text";
+				//				regExpValidator.required = false;
+				//				regExpValidator.trigger = valueField;
+				//
+				//				regExpValidator.triggerEvent = Event.CHANGE;
+				//
+				//				regExpValidator.addEventListener( ValidationResultEvent.VALID, validHandler, false, 0, true );
+				//				regExpValidator.addEventListener( ValidationResultEvent.INVALID, validHandler, false, 0, true );
+				//
+				//				regExpValidator.validate();
 			}
 
 			private function validHandler( event : ValidationResultEvent ) : void
 			{
+				//				if ( event.type == ValidationResultEvent.VALID )
+				//				{
+				//					okButton.enabled = true;
+				//				}
+				//				else if ( event.type == ValidationResultEvent.INVALID )
+				//				{
+				//					okButton.enabled = false;
+				//				}
+
 			}
 
 			private function getColorByGroup( groupNumber : uint ) : String
@@ -116,11 +150,6 @@
 
 				return colorGroup;
 			}
-
-			protected function valueField_changeHandler( event : ListEvent ) : void
-			{
-				_attributeVO.value = valueField.selectedItem.id;
-			}
 		]]>
 	</fx:Script>
 
@@ -134,8 +163,7 @@
 				minHeight="21" text="{ _attributeDescriptionVO.displayName }" width="100%"
 				paddingBottom="2" paddingRight="5" paddingTop="2" textAlign="right" verticalAlign="middle" />
 
-	<mx:ComboBox id="valueField"
-				 height="21" labelField="name" minWidth="10" width="90"
-				 textAlign="left"
-				 change="valueField_changeHandler( event )" />
+	<attributeRenderers:ColorPicker id="valueField"
+							 height="21" minWidth="10" width="90"
+							 color="@{ _attributeVO.value }" textAlign="left" />
 </s:ItemRenderer>
