--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeDropdownItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeDropdownItemRenderer.mxml
@@ -8,7 +8,11 @@
 
 	<fx:Script>
 		<![CDATA[
-			import mx.binding.utils.BindingUtils;
+			import net.vdombox.ide.modules.wysiwyg.view.components.AttributeValidator;
+			import mx.events.ListEvent;
+			import mx.collections.ArrayCollection;
+			import mx.collections.Sort;
+			import mx.collections.SortField;
 			import mx.events.ValidationResultEvent;
 
 			import net.vdombox.ide.common.vo.AttributeDescriptionVO;
@@ -34,47 +38,78 @@
 
 				var codeInterface : Object = {}
 				var matches : Array = _attributeDescriptionVO.codeInterface.match( codeInterfaceRE );
-
+//
 				codeInterface[ "type" ] = matches[ 1 ].toLowerCase();
 				codeInterface[ "value" ] = matches[ 2 ];
 
 				nameLabel.setStyle( "backgroundColor", getColorByGroup( _attributeDescriptionVO.colorGroup ) );
-				valueField.maxChars = uint( codeInterface[ "value" ] );
+//				valueField.maxChars = uint( codeInterface[ "value" ] );
 //				valueField.text = _attributeVO.value;
 
 
-				regExpValidator.expression = _attributeDescriptionVO.regularExpressionValidation.toString();
-				regExpValidator.noMatchError = _attributeDescriptionVO.errorValidationMessage;
-				regExpValidator.validate();
+
+
+
+				var comboBoxData : ArrayCollection = new ArrayCollection();
+				var codeInterfaceValueRE : RegExp = /\((.*?)\|(.*?)\)/g;
+
+				var listValues : Array = [];
+				var selectedItem : Object = {};
+
+				while ( listValues = codeInterfaceValueRE.exec( codeInterface[ "value" ] ) )
+				{
+
+					var listItem : Object = { label: listValues[ 1 ], data: listValues[ 2 ] };
+
+					comboBoxData.addItem( listItem );
+
+					if ( _attributeVO.value == listValues[ 2 ] )
+						selectedItem = comboBoxData[ comboBoxData.length - 1 ];
+				}
+
+				comboBoxData.sort = new Sort();
+				comboBoxData.sort.fields = [ new SortField( "label", true ) ];
+				comboBoxData.refresh();
+
+				valueField.dataProvider = comboBoxData;
+				valueField.selectedItem = selectedItem;
+
+
+
+
+
+//				regExpValidator.expression = _attributeDescriptionVO.regularExpressionValidation.toString();
+//				regExpValidator.noMatchError = _attributeDescriptionVO.errorValidationMessage;
+//				regExpValidator.validate();
 			}
 
 			private var regExpValidator : AttributeValidator = new AttributeValidator();
 
 			private function creationCompleteHandler() : void
 			{
-				regExpValidator.source = valueField;
-				regExpValidator.property = "text";
-				regExpValidator.required = false;
-				regExpValidator.trigger = valueField;
-
-				regExpValidator.triggerEvent = Event.CHANGE;
-
-				regExpValidator.addEventListener( ValidationResultEvent.VALID, validHandler, false, 0, true );
-				regExpValidator.addEventListener( ValidationResultEvent.INVALID, validHandler, false, 0, true );
-
-				regExpValidator.validate();
+//				regExpValidator.source = valueField;
+//				regExpValidator.property = "text";
+//				regExpValidator.required = false;
+//				regExpValidator.trigger = valueField;
+//
+//				regExpValidator.triggerEvent = Event.CHANGE;
+//
+//				regExpValidator.addEventListener( ValidationResultEvent.VALID, validHandler, false, 0, true );
+//				regExpValidator.addEventListener( ValidationResultEvent.INVALID, validHandler, false, 0, true );
+//
+//				regExpValidator.validate();
 			}
 
 			private function validHandler( event : ValidationResultEvent ) : void
 			{
-//				if ( event.type == ValidationResultEvent.VALID )
-//				{
-//					okButton.enabled = true;
-//				}
-//				else if ( event.type == ValidationResultEvent.INVALID )
-//				{
-//					okButton.enabled = false;
-//				}
+				//				if ( event.type == ValidationResultEvent.VALID )
+				//				{
+				//					okButton.enabled = true;
+				//				}
+				//				else if ( event.type == ValidationResultEvent.INVALID )
+				//				{
+				//					okButton.enabled = false;
+				//				}
 
 			}
 
@@ -116,6 +151,11 @@
 
 				return colorGroup;
 			}
+
+			protected function valueField_changeHandler( event : ListEvent ) : void
+			{
+				_attributeVO.value = valueField.value.toString();
+			}
 		]]>
 	</fx:Script>
 
@@ -129,7 +169,8 @@
 				minHeight="21" text="{ _attributeDescriptionVO.displayName }" width="100%"
 				paddingBottom="2" paddingRight="5" paddingTop="2" textAlign="right" verticalAlign="middle" />
 
-	<s:TextInput id="valueField"
-				 height="21" minWidth="0" text="@{_attributeVO.value}" width="90"
-				 textAlign="left" />
+	<mx:ComboBox id="valueField"
+				 height="21" minWidth="10" width="90"
+				 textAlign="left"
+				 change="valueField_changeHandler(event)" />
 </s:ItemRenderer>
