--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeFileItemRenderer.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/AttributeFileItemRenderer.mxml
@@ -2,15 +2,15 @@
 <s:ItemRenderer xmlns:fx="http://ns.adobe.com/mxml/2009"
 				xmlns:s="library://ns.adobe.com/flex/spark"
 				xmlns:mx="library://ns.adobe.com/flex/halo"
-				xmlns:colorPicker="net.vdombox.ide.modules.wysiwyg.view.components.colorPicker.*"
+				xmlns:multiline="net.vdombox.ide.modules.wysiwyg.view.components.multiline.*"
+				xmlns:resourceSelector="net.vdombox.ide.modules.wysiwyg.view.components.resourceSelector.*"
 				
-				minHeight="21" width="100%">
+				minHeight="21" width="100%"
+				creationComplete="creationCompleteHandler()" xmlns:attributeRenderers="net.vdombox.ide.modules.wysiwyg.view.components.attributeRenderers.*">
 
 	<fx:Script>
 		<![CDATA[
-			import mx.collections.ArrayCollection;
-			import mx.collections.Sort;
-			import mx.collections.SortField;
+			import net.vdombox.ide.modules.wysiwyg.view.components.AttributeValidator;
 			import mx.events.ValidationResultEvent;
 
 			import net.vdombox.ide.common.vo.AttributeDescriptionVO;
@@ -36,46 +36,15 @@
 
 				var codeInterface : Object = {}
 				var matches : Array = _attributeDescriptionVO.codeInterface.match( codeInterfaceRE );
-				//
+
 				codeInterface[ "type" ] = matches[ 1 ].toLowerCase();
 				codeInterface[ "value" ] = matches[ 2 ];
 
 				nameLabel.setStyle( "backgroundColor", getColorByGroup( _attributeDescriptionVO.colorGroup ) );
-				//				valueField.maxChars = uint( codeInterface[ "value" ] );
-				//				valueField.text = _attributeVO.value;
 
-
-
-
-
-//				var comboBoxData : ArrayCollection = new ArrayCollection();
-//				var codeInterfaceValueRE : RegExp = /\((.*?)\|(.*?)\)/g;
-//
-//				var listValues : Array = [];
-//				var selectedItem : Object = {};
-//
-//				while ( listValues = codeInterfaceValueRE.exec( codeInterface[ "value" ] ) )
-//				{
-//
-//					var listItem : Object = { label: listValues[ 1 ], data: listValues[ 2 ] };
-//
-//					comboBoxData.addItem( listItem );
-//
-//					if ( _attributeVO.value == listValues[ 2 ] )
-//						selectedItem = comboBoxData[ comboBoxData.length - 1 ];
-//				}
-//
-//				comboBoxData.sort = new Sort();
-//				comboBoxData.sort.fields = [ new SortField( "label", true ) ];
-//				comboBoxData.refresh();
-
-//				valueField.color = _attributeVO.value;
-//				valueField.selectedItem = selectedItem;
-
-
-
-
-
+//				valueField.value = _attributeVO.value;
+//				valueField.title = _attributeDescriptionVO.displayName;
+				//
 				//				regExpValidator.expression = _attributeDescriptionVO.regularExpressionValidation.toString();
 				//				regExpValidator.noMatchError = _attributeDescriptionVO.errorValidationMessage;
 				//				regExpValidator.validate();
@@ -153,7 +122,7 @@
 	</fx:Script>
 
 	<s:layout>
-
+		
 		<s:HorizontalLayout verticalAlign="middle"
 							gap="0" />
 	</s:layout>
@@ -162,7 +131,7 @@
 				minHeight="21" text="{ _attributeDescriptionVO.displayName }" width="100%"
 				paddingBottom="2" paddingRight="5" paddingTop="2" textAlign="right" verticalAlign="middle" />
 
-	<colorPicker:ColorPicker id="valueField"
-							 height="21" minWidth="10" width="90"
-							 color="@{ _attributeVO.value }" textAlign="left" />
+	<attributeRenderers:ResourceSelector id="valueField" value="@{ _attributeVO.value }"
+									   height="21" width="90"
+									   textAlign="left" />
 </s:ItemRenderer>
