--- a/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/Multiline.mxml
+++ b/IDE/v.02/modules/Wysiwyg/src/net/vdombox/ide/modules/wysiwyg/view/components/attributeRenderers/Multiline.mxml
@@ -6,6 +6,7 @@
 
 	<mx:Script>
 		<![CDATA[
+			import net.vdombox.ide.modules.wysiwyg.view.components.windows.MultilineWindow;
 			import mx.core.UIComponent;
 			import mx.events.FlexEvent;
 			import mx.events.ValidationResultEvent;
